# cmafly

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  README.zh-TW.md  SPEC.md
.github/workflows/: ci.yml
crates/indexer/: Cargo.toml
crates/indexer/src/: main.rs
crates/packager/: Cargo.toml
crates/packager/src/: error.rs  lib.rs  read_at.rs
crates/packager/src/demux/: mod.rs  moov.rs  reader.rs  sample_table.rs
crates/packager/src/fmp4/: boxes.rs  init.rs  media.rs  mod.rs
crates/packager/src/index/: builder.rs  format.rs  mod.rs  view.rs
crates/packager/src/playlist/: m3u8.rs  mod.rs
crates/packager/src/segment/: mod.rs  splitter.rs
crates/packager/tests/: idx_round_trip.rs  smoke.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  handlers.rs  main.rs  registry.rs
