[package]
name = "cmafly-index"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "cmafly-index"
path = "src/main.rs"

[dependencies]
cmafly = { path = "../packager" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
memmap2 = "0.9"
